# ai-finlab

./: .gitignore  README.md  main.py  pyproject.toml
api/: main.py
api/config/: prompts.py  settings.py
api/routers/: rag.py  search.py
api/services/: embeddings.py  rag.py  search.py
ingestion/: create_collection.py  ingestion.py  test_query.py
ingestion/utils/: edgar_client.py  semantic_chunker.py
